# CMakeList.txt : CMake project for Median of two sorted array, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)
project(MEDIAN_OF_TWO_SORTED_ARRAY)

# Add source to this project's executable.
add_executable (MEDIAN_OF_TWO_SORTED_ARRAY "Median of two sorted array.cpp" "Median of two sorted array.h")

# TODO: Add tests and install targets if needed.
