file(GLOB sourceFiles "*.cpp")
foreach(file ${sourceFiles})
    get_filename_component(problem ${file} NAME_WLE)
    message("add " ${problem})
    add_executable(${problem} ${file})
    set_property(TARGET ${problem} PROPERTY CXX_STANDARD 20)
    target_include_directories(${problem} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
endforeach()
